--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
 # Xcode
-.DS_Store
-/.build/
-/Carthage/
-/Pods/
-/*.pbxuser
-!default.pbxuser
-/*.mode1v3
-!default.mode1v3
-/*.mode2v3
-!default.mode2v3
-/*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.xcodeproj/*.pbxuser
-*.xcodeproj/*.xcworkspace
-*.xcodeproj/*.xcuserstate
-*.xcodeproj/workspace.xcuserdata
+*.xcodeproj
+*.xcworkspace
+xcuserdata/
+DerivedData/
+*.swp
+*~
+.build/
+
+# Swift PM
+.packages
+.build/
 
