--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,20 @@ DerivedData/
 *.swp
 *~
 .build/
-
+Package.resolved
 # Swift PM
 .packages
 .build/
-
+*.plist
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
