--- a/SupportingFiles/Info.plist
+++ b/SupportingFiles/Info.plist
@@ -13,7 +13,7 @@
 	<key>UIInterfaceOrientationsPortraitUpsideDown</key>
 	<string>6.0</string>
 	<key> Location When In Use Usage Description</key>
-	<string>This app requires location access to take photos of your property for measurements</string>
+	<string>This app requires location access to take photos of your property for accurate measurements</string>
 	<key>CFBundleExecutable</key>
 	<string></string>
 	<key>GPS</key>
