--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Xcode (example version, adjust as needed)
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '12.4'
+    - name: Set up Xcode
+  uses: maxim-lobanov/setup-xcode@v1
+  with:
+    xcode-version: '15.2' # Updated version
+
 
     - name: Build and test
       run: |
